<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Autolycus</string>
	<string name="shortcut">Autolycus Bus Predictions</string>
	<string name="shortcut_stopname">Name</string>
	<string name="shortcut_stopnamehint">This will appear on the home screen.</string>
	<string name="shortcut_submit">Create Shortcut</string>
	<string name="no_arrival">No arrival times available.</string>
	<string name="prediction_showall_toggle">Show all routes at this stop</string>
	
	<string name="menu_prefs">Settings</string>
	<string name="menu_update">Update Now</string>
	<string name="menu_details">Details</string>
	
	<string name="prefs_delay_detail">Time in seconds (0 to disable, must be greater then 60)</string>
	<string name="prefs_delay">Frequency of Prediction Updates</string>
	<string name="prefs_delay_error">Frequency set is too short.</string>
	<string name="prefs_defaultsys">Default Transit System</string>
	
	<!--  window titles -->
	<string name="route_title">Select Route</string>
	<string name="dir_title">Select Direction</string>
	<string name="stop_title">Select Stop</string>
	<string name="prediction_title">Bus Stop Arrival Times</string>
	<string name="prefs_title">Autolycus Preferences</string>
	<string name="shortcut_title">Create a Shortcut</string>
	
	<string name="pref_clear">Clear Cache</string>
	<string name="pref_clear_suc">Cache successfully deleted.</string>
	<string name="pref_clear_fail">Cache deletion was unsuccessful.</string>
	<string name="pref_clear_gone">Cache not found.</string>
	
	<string name="about_title">About Autolycus</string>
	<string name="about_copyrights">Copyright 2010 Joseph Booker. Original bus icon from CKSInfo.com, heavily modified by Dmitriy Vysotskiy. Available under the GPLv3 at https://github.com/sargas/autolycus</string>
	<string name="about_help">Alternative use: From the home screen, press the Menu button. Choose \'Add\', and then choose the option to add \'Shortcuts\'. Autolycus Bus Predictions should be among the choices. Use folders in the home screen to organize multiple bus stops.</string>
	<string name="about_button">Add Shortcut</string>
	<string name="predictionview_delayed">Delayed</string>
	
	<string name="prediction_details_title">Details</string>
	
	<string name="bulletins_details_title">Service Bulletin</string>
	<string name="bulletins_drawer_title">Service Bulletins</string>
</resources>
