<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">

<TextView
	android:id="@+id/shortcut_sys"
	android:layout_height="wrap_content"
	android:layout_width="fill_parent"
	android:textAppearance="?android:attr/textAppearanceLarge" />
<TextView
	android:id="@+id/shortcut_stpnm"
	android:layout_height="wrap_content"
	android:layout_width="fill_parent"
	android:layout_below="@+id/shortcut_sys"
	android:textAppearance="?android:attr/textAppearanceLarge" />
<TextView
	android:id="@+id/shortcut_route"
	android:layout_height="wrap_content"
	android:layout_width="wrap_content"
	android:textAppearance="?android:attr/textAppearanceLarge"
	android:layout_below="@+id/shortcut_stpnm"
	android:layout_alignParentLeft="true" />
<TextView
	android:id="@+id/shortcut_direction"
	android:layout_height="wrap_content"
	android:layout_width="wrap_content"
	android:textAppearance="?android:attr/textAppearanceLarge"
	android:layout_below="@+id/shortcut_stpnm"
	android:layout_alignParentRight="true" />
<TextView
		android:id="@+id/shortcut_stopname_label"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/shortcut_stopname"
		android:paddingTop="50dip"
		android:gravity="left"
		android:layout_below="@+id/shortcut_route" />
<EditText
		android:lines="1"
		android:id="@+id/shortcut_stopname"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:hint="@string/shortcut_stopnamehint"
		android:scrollHorizontally="true"
		android:gravity="right"
		android:layout_below="@+id/shortcut_stopname_label"/>
<Button
	android:id="@+id/shortcut_submit"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content" android:text="@string/shortcut_submit"
	android:layout_below="@+id/shortcut_stopname" />
</RelativeLayout>
